# docs/swagger.json
@@ -1,12 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API documentation for Food Delivery services",
+        "title": "API Gateway",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8088",
+    "basePath": "/",
     "paths": {
         "/cart": {
             "post": {
-                "description": "Create a new cart",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new cart with the provided details.",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,7 +29,7 @@
                 "summary": "Create a new cart",
                 "parameters": [
                     {
-                        "description": "Cart",
+                        "description": "Cart details",
                         "name": "cart",
                         "in": "body",
                         "required": true,
@@ -30,13 +40,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Success Create Cart",
                         "schema": {
-                            "$ref": "#/definitions/genproto.Empty"
+                            "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error message",
                         "schema": {
                             "type": "string"
                         }
@@ -46,6 +56,11 @@
         },
         "/cart/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a cart by id",
                 "consumes": [
                     "application/json"
@@ -82,6 +97,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a cart by id",
                 "consumes": [
                     "application/json"
@@ -142,6 +162,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a cart by id",
                 "consumes": [
                     "application/json"
@@ -180,6 +205,11 @@
         },
         "/carts": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all carts",
                 "consumes": [
                     "application/json"
@@ -229,6 +259,11 @@
         },
         "/courier_location": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new courier location",
                 "consumes": [
                     "application/json"
@@ -269,6 +304,11 @@
         },
         "/courier_location/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a courier location by id",
                 "consumes": [
                     "application/json"
@@ -305,6 +345,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a courier location by id",
                 "consumes": [
                     "application/json"
@@ -379,6 +424,11 @@
         },
         "/courier_locations": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all courier locations",
                 "consumes": [
                     "application/json"
@@ -446,6 +496,11 @@
         },
         "/courier_location{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a courier location by id",
                 "consumes": [
                     "application/json"
@@ -586,6 +641,11 @@
         },
         "/notification": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new notification",
                 "consumes": [
                     "application/json"
@@ -626,6 +686,11 @@
         },
         "/notification/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get notification by id",
                 "consumes": [
                     "application/json"
@@ -664,6 +729,11 @@
         },
         "/order": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new order",
                 "consumes": [
                     "application/json"
@@ -704,6 +774,11 @@
         },
         "/order/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get an order by id",
                 "consumes": [
                     "application/json"
@@ -740,6 +815,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an order by id",
                 "consumes": [
                     "application/json"
@@ -800,6 +880,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an order by id",
                 "consumes": [
                     "application/json"
@@ -838,6 +923,11 @@
         },
         "/order_item": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new order item",
                 "consumes": [
                     "application/json"
@@ -878,6 +968,11 @@
         },
         "/order_item/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get an order item by id",
                 "consumes": [
                     "application/json"
@@ -914,6 +1009,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an order item by id",
                 "consumes": [
                     "application/json"
@@ -974,6 +1074,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an order item by id",
                 "consumes": [
                     "application/json"
@@ -1012,6 +1117,11 @@
         },
         "/order_items": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all order items",
                 "consumes": [
                     "application/json"
@@ -1067,6 +1177,11 @@
         },
         "/orders": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all orders",
                 "consumes": [
                     "application/json"
@@ -1128,6 +1243,11 @@
         },
         "/product": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new product",
                 "consumes": [
                     "application/json"
@@ -1168,6 +1288,11 @@
         },
         "/product/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a product by id",
                 "consumes": [
                     "application/json"
@@ -1204,6 +1329,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a product by id",
                 "consumes": [
                     "application/json"
@@ -1264,6 +1394,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a product by id",
                 "consumes": [
                     "application/json"
@@ -1302,6 +1437,11 @@
         },
         "/products": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all products",
                 "consumes": [
                     "application/json"
@@ -1402,6 +1542,11 @@
         },
         "/task": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new task",
                 "consumes": [
                     "application/json"
@@ -1442,6 +1587,11 @@
         },
         "/task/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a task by id",
                 "consumes": [
                     "application/json"
@@ -1478,6 +1628,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a task by id",
                 "consumes": [
                     "application/json"
@@ -1546,6 +1701,11 @@
         },
         "/tasks": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all tasks",
                 "consumes": [
                     "application/json"
@@ -1607,6 +1767,11 @@
         },
         "/task{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a task by id",
                 "consumes": [
                     "application/json"
@@ -1657,7 +1822,7 @@
                 "options": {
                     "type": "string"
                 },
-                "product_id": {
+                "product": {
                     "$ref": "#/definitions/genproto.Product"
                 },
                 "quantity": {
@@ -1706,7 +1871,7 @@
                 "options": {
                     "type": "string"
                 },
-                "product_id": {
+                "product": {
                     "type": "string"
                 },
                 "quantity": {
@@ -1998,6 +2163,13 @@
         },
         "genproto.UpdateCartRes": {
             "type": "object"
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
